@@ -48,7 +48,7 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.2.3</version>
+            <version>2.2.3U1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
