@@ -44,7 +44,7 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.2.3</version>
+            <version>2.2.3U1</version>
             <scope>provided</scope>
             <!--Should be part of GlassFish v3-->
         </dependency>
