@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.2.3</version>
+            <version>2.2.3U1</version>
         </dependency>
         <dependency>
             <groupId>javax.persistence</groupId>
